[package]
name = "advensum"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "advensum"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { version = "0.28.0", features = ["devnet", "metadata", "mpl-token-metadata"] }
mpl-token-metadata = { version = "1.13.0", features = ["no-entrypoint"] }
switchboard-v2 = "0.3.0"
